Customização e Introdução do projeto!

--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+@theme {
+
+    /*  CUSTOMIZAÇÃO    */
+
+    --valor9xl: 9rem;
+    --valor14: 3.5rem;
+    --valor125px: 125px;
+    --porcent175: 175%; 
+    --porcent195: 195%; 
+    --color-hoverspt: #3DD973;
+    --color-purple-main: #3449BF;
+    --color-green-main: #2EF24B;
+    --spotify-theme: url('/img/bursts.svg');
+    --spotify-theme-mobile: url('/img/bursts-mobile.svg');
+    --banner: 46% 4%;
+    --banner-mobile: top 25% center;
+}
