--- a/src/output.css
+++ b/src/output.css
@@ -377,16 +377,15 @@
     --default-mono-font-variation-settings: var(
       --font-mono--font-variation-settings
     );
-    --valor9xl: 9rem;
-    --valor14: 3.5rem;
-    --valor125px: 125px;
-    --porcent175: 175%;
-    --porcent195: 195%;
     --color-hoverspt: #3DD973;
     --color-purple-main: #3449BF;
     --color-green-main: #2EF24B;
-    --spotify-theme: url('/img/bursts.svg');
-    --spotify-theme-mobile: url('/img/bursts-mobile.svg');
+    --valor9xl: 9rem;
+    --valor14: 3.5rem;
+    --valor125px: 125px;
+    --valor132px: 132px;
+    --porcent175: 175%;
+    --porcent195: 195%;
     --banner: 46% 4%;
     --banner-mobile: top 25% center;
   }
@@ -707,6 +706,24 @@
       max-width: 96rem !important;
     }
   }
+  .mx-2 {
+    margin-inline: calc(var(--spacing) * 2);
+  }
+  .mx-auto {
+    margin-inline: auto;
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
+  }
+  .mr-4 {
+    margin-right: calc(var(--spacing) * 4);
+  }
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
   .box-border {
     box-sizing: border-box;
   }
@@ -794,6 +811,9 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
+  }
   .h-screen {
     height: 100vh;
   }
@@ -815,11 +835,11 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-12 {
+    width: calc(var(--spacing) * 12);
+  }
   .w-20 {
     width: calc(var(--spacing) * 20);
-  }
-  .w-31 {
-    width: calc(var(--spacing) * 31);
   }
   .w-full {
     width: 100%;
@@ -832,6 +852,12 @@
   }
   .max-w-screen {
     max-width: 100vw;
+  }
+  .max-w-xl {
+    max-width: var(--container-xl);
+  }
+  .max-w-xs {
+    max-width: var(--container-xs);
   }
   .min-w-none {
     min-width: none;
@@ -1078,6 +1104,9 @@
   }
   .auto-rows-min {
     grid-auto-rows: min-content;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .grid-cols-none {
     grid-template-columns: none;
@@ -1329,6 +1358,9 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
+  }
   .rounded-s {
     border-start-start-radius: 0.25rem;
     border-end-start-radius: 0.25rem;
@@ -1446,14 +1478,38 @@
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
+  .bg-\[\(top_25\%_center\)\,\(175\%\)\] {
+    background-color: (top 25% center),(175%);
+  }
+  .bg-\[\(top_25\%_center\)\,\(195\%\)\] {
+    background-color: (top 25% center),(195%);
+  }
+  .bg-\[\(top_25\%_center\)\,\] {
+    background-color: (top 25% center),;
+  }
+  .bg-\[\(top_25\%_center\)\] {
+    background-color: (top 25% center);
+  }
   .bg-\[color\:var\(--my-color\)\] {
     background-color: var(--my-color);
+  }
+  .bg-\[top_25\%_center\,\] {
+    background-color: top 25% center,;
   }
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
   .bg-black {
     background-color: var(--color-black);
+  }
+  .bg-gray-900 {
+    background-color: var(--color-gray-900);
+  }
+  .bg-green-main {
+    background-color: var(--color-green-main);
+  }
+  .bg-purple-main {
+    background-color: var(--color-purple-main);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1475,6 +1531,9 @@
   .bg-radial {
     --tw-gradient-position: in oklab,;
     background-image: radial-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[url\(img\/bursts-mobile\.svg\)\] {
+    background-image: url(img/bursts-mobile.svg);
   }
   .bg-none {
     background-image: none;
@@ -1527,6 +1586,15 @@
   }
   .bg-clip-text {
     background-clip: text;
+  }
+  .bg-\[top_20\%_center\] {
+    background-position: top 20% center;
+  }
+  .bg-\[top_23\%_center\] {
+    background-position: top 23% center;
+  }
+  .bg-\[top_25\%_center\] {
+    background-position: top 25% center;
   }
   .bg-bottom {
     background-position: bottom;
@@ -1633,11 +1701,29 @@
   .p-1 {
     padding: calc(var(--spacing) * 1);
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-10 {
+    padding-inline: calc(var(--spacing) * 10);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
+  }
+  .py-40 {
+    padding-block: calc(var(--spacing) * 40);
+  }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
   }
   .text-center {
     text-align: center;
@@ -1681,9 +1767,29 @@
   .align-top {
     vertical-align: top;
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
   }
   .leading-none {
     --tw-leading: 1;
@@ -1692,6 +1798,10 @@
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
+  }
+  .tracking-widest {
+    --tw-tracking: var(--tracking-widest);
+    letter-spacing: var(--tracking-widest);
   }
   .text-balance {
     text-wrap: balance;
@@ -1765,6 +1875,18 @@
   }
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
+  }
+  .text-gray-500 {
+    color: var(--color-gray-500);
+  }
+  .text-gray-600 {
+    color: var(--color-gray-600);
+  }
+  .text-green-main {
+    color: var(--color-green-main);
+  }
+  .text-purple-main {
+    color: var(--color-purple-main);
   }
   .text-white {
     color: var(--color-white);
@@ -2051,6 +2173,10 @@
   .transition-normal {
     transition-behavior: normal;
   }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
+  }
   .ease-in {
     --tw-ease: var(--ease-in);
     transition-timing-function: var(--ease-in);
@@ -2212,6 +2338,42 @@
   .transform-view {
     transform-box: view-box;
   }
+  .hover\:bg-white {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:text-green-main {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-green-main);
+      }
+    }
+  }
+  .hover\:text-hoverspt {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-hoverspt);
+      }
+    }
+  }
+  .md\:col-span-1 {
+    @media (width >= 48rem) {
+      grid-column: span 1 / span 1;
+    }
+  }
+  .md\:col-span-2 {
+    @media (width >= 48rem) {
+      grid-column: span 2 / span 2;
+    }
+  }
+  .md\:col-span-4 {
+    @media (width >= 48rem) {
+      grid-column: span 4 / span 4;
+    }
+  }
   .md\:flex {
     @media (width >= 48rem) {
       display: flex;
@@ -2222,34 +2384,71 @@
       display: none;
     }
   }
-  .md\:w-\(--\) {
-    @media (width >= 48rem) {
-      width: var(--);
-    }
-  }
-  .md\:w-\(--2\) {
-    @media (width >= 48rem) {
-      width: var(--2);
-    }
-  }
-  .md\:w-\(--valor\) {
-    @media (width >= 48rem) {
-      width: var(--valor);
-    }
-  }
   .md\:w-\(--valor125px\) {
     @media (width >= 48rem) {
       width: var(--valor125px);
     }
   }
-  .md\:w-31 {
+  .md\:w-\(--valor132px\) {
     @media (width >= 48rem) {
-      width: calc(var(--spacing) * 31);
+      width: var(--valor132px);
+    }
+  }
+  .md\:max-w-2xl {
+    @media (width >= 48rem) {
+      max-width: var(--container-2xl);
+    }
+  }
+  .md\:grid-cols-6 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+  }
+  .md\:justify-end {
+    @media (width >= 48rem) {
+      justify-content: flex-end;
+    }
+  }
+  .md\:bg-purple-main {
+    @media (width >= 48rem) {
+      background-color: var(--color-purple-main);
+    }
+  }
+  .md\:bg-\[url\(img\/bursts\.svg\)\] {
+    @media (width >= 48rem) {
+      background-image: url(img/bursts.svg);
+    }
+  }
+  .md\:p-20 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 20);
     }
   }
   .md\:px-20 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:pt-0 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:pt-4 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:text-9xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-9xl);
+      line-height: var(--tw-leading, var(--text-9xl--line-height));
+    }
+  }
+  .md\:text-lg {
+    @media (width >= 48rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
 }
@@ -2381,6 +2580,10 @@
   inherits: false;
 }
 @property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-tracking {
   syntax: "*";
   inherits: false;
 }
@@ -2536,6 +2739,10 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-ease {
   syntax: "*";
   inherits: false;
@@ -2553,10 +2760,6 @@
   inherits: false;
 }
 @property --tw-contain-style {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-duration {
   syntax: "*";
   inherits: false;
 }
